--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
@@ -41,8 +47,7 @@
 		
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
-		    <artifactId>lombok</artifactId>	
-			<version>1.18.30</version>	    
+		    <artifactId>lombok</artifactId>	 
 		    <scope>provided</scope>
 		</dependency>
 		
